--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="option_4">Option 4</string>
     <string name="submit">Submit</string>
     <string name="back">Back</string>
+    <string name="quizdroid">QuizDroid</string>
 </resources>
