--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,16 @@
 <resources>
     <string name="app_name">QuizDroid (Basics)</string>
+    <string name="next" />
+    <string name="nxt">Next</string>
+    <string name="back">back</string>
+    <string name="submit">submit</string>
+    <string name="option_4">4\n</string>
+    <string name="option_3">3</string>
+    <string name="option_2">2</string>
+    <string name="option_1">1</string>
+    <string name="btnBegin">Begin</string>
+    <string name="descrip">description</string>
+    <string name="topics">Topics</string>
+    <string name="hello">Hello</string>
+    <string name="question_str">Question\n</string>
 </resources>
