--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="submit">Submit</string>
     <string name="back">Back</string>
     <string name="quizdroid">QuizDroid</string>
+    <string name="preferences">Preferences</string>
 </resources>
